--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="images/cover_image" />
     <title>Petros in numbers</title>
 
     <!-- Google fonts -->
@@ -222,7 +223,6 @@
         font-size: 1.1em; /* Increase font size for highlights on mobile */
     }
     }
-    
 
     </style>
     <style>
@@ -346,6 +346,7 @@
         <div><br><br></div>
 
         <iframe title="Frequent Faces on Petros Ghazaryan’s Show: Guests: 5+ Appearances" aria-label="Table" id="datawrapper-chart-wP83E" src="https://datawrapper.dwcdn.net/wP83E/2/" scrolling="no" frameborder="2" style="width: 0; min-width: 100% !important; border: none;" height="4049" data-external="1"></iframe>
+        
         <script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}})}();
         </script>
         <p class="content"> Despite receiving numerous invitations, Edmon Marukyan's appearances on the state channel, for example, have decreased over time. A breakdown by year reveals that, he appeared less frequently on Petros Ghazaryan's show, and by 2024-2025, he was no longer a guest.</p>
