the last update

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         font-size: 1.2em; /* Reduce font size for mobile */
     }
     .with-image-bg {
-        background-position: 70% 100%; /* Focus on the right side of the image */
+        background-position: 65% 100%; /* Focus on the right side of the image */
         height: 200px; /* Adjust the height as needed for mobile */
     }
     .header {
@@ -184,12 +184,12 @@
 
     h1 {
         font-size: 2em; /* Adjust heading font size for mobile */
-        text-align: center;
+        text-align: left;
     }
 
     .subhead {
         font-size: 1.5em; /* Adjust subheading font size */
-        text-align: center;
+        text-align: left;
     }
 
     .container {
@@ -380,7 +380,7 @@
             </div>
             <div class="content">
                 <h1>When the Prime Minister Talks, Time Stands Still</h1>
-                <p class="video_subhead">While the average interview duration across all 880 interviews is <span style="color:#AE6557; background-color:white ;">24.5 minutes</span>, interviews with Pashinyan typically take<span style="color:#AE6557; background-color:white ;"> around 65.5 minutes</span>, which is more than two times longer than the average.</p>
+                <p class="video_subhead">While the average interview duration across all 880 interviews is <span style="color:#AE6557; background-color:white ;">24.5 minutes</span>, interviews with Pashinyan typically take <span style="color:#AE6557; background-color:white ;">around 65.5 minutes</span>, which is more than two times longer than the average.</p>
             </div>
         </div>
         
